<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.funnrun.asc1.funnrun.NewRun">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewRunId"
        android:text="@string/NewRunId"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Day"
        android:hint="@string/Day"
        android:layout_below="@id/NewRunId"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Duration"
        android:hint="@string/Duration"
        android:layout_below="@id/Day"
        android:inputType="number"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Distance"
        android:hint="@string/Distance"
        android:layout_below="@id/Duration"
        android:inputType="number"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Pace"
        android:hint="@string/Pace"
        android:layout_below="@id/Distance"
        android:inputType="number"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Location"
        android:hint="@string/Location"
        android:layout_below="@id/Pace" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Notes"
        android:hint="@string/Notes"
        android:layout_below="@id/Location" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CreateRun"
        android:text= "@string/CreateRun"
        android:layout_below="@id/Notes"/>
</RelativeLayout>
