<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Title"
        android:text="@string/FunNRun"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewRun"
        android:text="@string/NewRun"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/History"
        android:text="@string/History"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/NewRun"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Goals"
        android:text="@string/Goals"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/History"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Achieve"
        android:text="ACHIEVEMENTS"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Goals"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GHHduration"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Achieve"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GHHdistance"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/GHHduration"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GHHpace"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/GHHdistance"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EDuration"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/GHHpace"/>

</RelativeLayout>
